public/css/index.css
html,
body {
    height: 100%;
    font-family: "Roboto", "Arial", sans-serif;
}

#hero {
    background-image: url("../img/coffee-code.jpg");
    background-color: rgb(41, 41, 41);
    background-color: rgba(41, 41, 41, 1);
    background-size: cover;
    opacity: 1;
    width: 100%;
    height: 100%;
    color: #f7f7f7;
}

#intro {
    font-family: "Coda", "Arial", sans-serif;
}

#intro-subtext {
    display: inline-block !important;
    overflow: hidden;
    white-space: nowrap;
    letter-spacing: .15em;
    animation: typing 4.5s steps(40, end);
}

#about-me img {
    width: 400px;
    height: 400px;
}

#about-me-heading {
    padding: 1rem;
}

#projects h1 {
    padding: 1em;
}

#projects .card {
    width: 25rem;
}

#projects .card-img-top {
    width: 318px;
    height: 321px;
}

#skills h1 {
    padding: 1rem;
}

#skills p {
    padding-top: 1rem;
}

#contact .row {
    width: 250px;
}

#get-in-touch {
    padding-top: 1rem;
}

#copyright {
    padding-top: 2rem !important;
}

/***** Semantics *****/

.bg-grey {
    background-color: #f7f7f7;
}

/* Progress bars widths */

.htmlpb {
    width: 95%;
}

.csspb {
    width: 90%;
}

.jspb {
    width: 75%;
}

.jqpb {
    width: 60%;
}

.njpb {
    width: 25%;
}

/**** CSS Animations *****/

/***** The sliding effect *****/

.anim.slide-left {
    opacity: 0;
    -moz-transition: all 500ms linear;
    -webkit-transition: all 500ms linear;
    -o-transition: all 500ms linear;
    transition: all 500ms linear;
    -moz-transform: translate3d(-30rem, 0px, 0px);
    -webkit-transform: translate3d(-30rem, 0px, 0px);
    -o-transform: translate(-30rem, 0px);
    -ms-transform: translate(-30rem, 0px);
    transform: translate3d(-30rem, 0px, 0px);
}

.anim.slide-left.in-view {
    opacity: 1;
    -moz-transform: translate3d(0px, 0px, 0px);
    -webkit-transform: translate3d(0px, 0px, 0px);
    -o-transform: translate(0px, 0px);
    -ms-transform: translate(0px, 0px);
    transform: translate3d(0px, 0px, 0px);
}

/* The typing effect */

@keyframes typing {
    from {
        width: 0
    }
    to {
        width: 100%
    }
}

/***** MEDIA QUERIES *****/

@media all and (max-width: 576px) {
    #intro-text {
        font-size: 2.5rem !important;
    }
    #intro-subtext {
        font-size: 1.1rem !important;
    }
    #about-me h1 {
        font-size: 2.5rem;
    }
    #about-me p {
        font-size: 1rem;
        text-align: left !important;
        padding: 1rem;
    }
    #projects h1 {
        font-size: 2.5rem;
    }
    #skills h1 {
        font-size: 2.5rem;
    }
    #copyright {
        font-size: 1rem;
    }
    #get-in-touch {
        font-size: 1rem;
    }
}

@media all and (max-width: 992px) {
    #intro-text {
        font-size: 4rem;
    }
    #intro-subtext {
        font-size: 2.5rem;
    }
    #projects .card {
        width: 35rem;
    }
}

